// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en MultipleCustomHooks Debe mostrar el componente correctamente 1`] = `
<div>
  <h1>
    Breaking Bad Quotes
  </h1>
  <hr />
  <div
    className="alert alert-info text-center"
  >
    Loading...
  </div>
  <button
    className="btn btn-success"
    onClick={[Function]}
  >
    Siguiente frase
  </button>
</div>
`;

exports[`Pruebas en MultipleCustomHooks Debe mostrar la informacion correctamente 1`] = `
<div>
  <h1>
    Breaking Bad Quotes
  </h1>
  <hr />
  <blockquote
    className="blockquote text-right"
  >
    <p
      className="mb-0"
    >
      Si estas triste, deja de estar triste
    </p>
    <footer
      className="blockquote-footer"
    >
      Gonzalo Flores
    </footer>
  </blockquote>
  <button
    className="btn btn-success"
    onClick={[Function]}
  >
    Siguiente frase
  </button>
</div>
`;
